package ej1;

import ej1.interfaces.ConsultaDeSaldo;
import ej1.interfaces.RetiroDeEfectivo;

public class Cobradores extends Cliente implements RetiroDeEfectivo, ConsultaDeSaldo {
}
