package AM;

public interface Transaccion {
    public void transaccionOk();

    public void transaccionNoOk();
}