package Java_III.I;

public interface Consulta extends Transaccion{
}
