package Java_III.I;

public interface Pago extends Transaccion{
}
