package Java_III.I;

public interface Retiro extends Transaccion{
}
