package Java_III.I;

public interface Transferencia extends Transaccion{
}
