@startuml Ej1 Transacciones Banco

skinparam ClassAttributeIconSize 0

interface Transaccion {
    + transaccionOk()
    + transaccionNoOk()
}

interface Deposito
interface Transferencia 
interface "Retiro de Efectivo" as efectivo
interface "Consulta de Saldo" as consulta
interface "Pago de Servicios" as pago

class Banco {
    - List<Cliente> clientes
}

abstract Cliente 

class Ejecutivo
class Basic
class Cobradores

Transaccion <|-- Deposito
Transaccion <|-- Transferencia
Transaccion <|-- efectivo
Transaccion <|-- consulta
Transaccion <|-- pago

Cliente <|-- Ejecutivo
Cliente <|-- Basic
Cliente <|-- Cobradores

Cliente <.o Banco

Ejecutivo ..|> Deposito
Ejecutivo ..|> Transferencia
Basic ..|> consulta
Basic ..|> pago 
Basic ..|> efectivo
Cobradores ..|> efectivo
Cobradores ..|> consulta

@enduml
